# python-etl-sql-postgres

./: .env example  .gitignore  README.md  pyproject.toml
docs/source/: conf.py  extract.rst  index.rst  load.rst
scripts/: mapping_destination.ps1  mapping_source.ps1
sql/: mapping.csv  mapping_destination.json  mapping_source.json
sql/destination/: db_database_DROP.sql  db_database__CREATE.sql  db_database__DROP.sql  db_database__GRANT.sql  db_role__CREATE.sql  db_role__DROP.sql  db_role__GRANT.sql  db_schemas__CREATE.sql  db_tables__TRUNCATE.sql  people.address_types__CREATE.sql  people.address_types__INSERT.sql  people.addresses__CREATE.sql  people.addresses__INSERT.sql  people.country_regions__CREATE.sql  people.country_regions__INSERT.sql  people.email_addresses__CREATE.sql  people.email_addresses__INSERT.sql  people.locations__CREATE.sql  people.locations__INSERT.sql  people.people__CREATE.sql  people.people__INSERT.sql  people.phone_number_types__CREATE.sql  people.phone_number_types__INSERT.sql  people.phone_numbers__CREATE.sql  people.phone_numbers__INSERT.sql  people.state_provinces__CREATE.sql  people.state_provinces__INSERT.sql  production.product_categories__CREATE.sql  production.product_categories__INSERT.sql  production.product_descriptions__CREATE.sql  production.product_descriptions__INSERT.sql  production.product_models__CREATE.sql  production.product_models__INSERT.sql  production.product_subcategories__CREATE.sql  production.product_subcategories__INSERT.sql  production.products__CREATE.sql  production.products__INSERT.sql  (+42 more)
src/: main.py
(+50 files in other folders)
